[NNO-8247] hierarchical select